tests/spec/compile-fail/047_mutfn_requires_mut_access.zn
// category: compile-fail
// profile: freestanding
// purpose: MutFn calls require mutable access to the callable

module tests.fail.mutFnRequiresMutAccess;

fn bad(f: MutFn<Unit>) {
    f(); // expected-error: calling MutFn requires mut access to the callable
}
